LIN-4105/LIN-4274 Fix Sonar issues
Change-Id: I9880ef03ff0e5c8b7c3cc04f0468e84f07f5d7b0